tests/golden/reject/return_const_negative_unsigned_reject.goo
package main

func f() uint8 {
	return -1
}

func main() {
	println(f())
}
